@@ -174,6 +174,9 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   maintenance/cleanupWatchlist.php
 * (bug 17488) RSS/Atom links in left toolbar are now localized
 * (bug 17472) use print <<<EOF in maintenance/importTextFile.php
+* Special:PrefixIndex: Move table styling to shared.css, add CSS IDs to tables
+  use correct message 'allpagesprefix' for input form label, replace _ with ' '
+  in next page link
 
 == API changes in 1.15 ==
 * (bug 16858) Revamped list=deletedrevs to make listing deleted contributions
